<resources>
  <string name="ism_app_name" translatable="false">Isometrik Stream</string>
  <string name="ism_error">Failed to complete requested operation, check Isometrik sdk logs for more details</string>
  <string name="ism_go_live">Go Live</string>
  <string name="ism_no_streams">No live streams found</string>
  <string name="ism_live_streams">Live Streams</string>
  <string name="ism_join">Join</string>
  <string name="ism_fetching_streams">Fetching Streams</string>
  <string name="ism_permission_start_streaming">Grant permission to start streaming!!</string>
  <string name="ism_permission_start_streaming_denied">Permission to start streaming denied!!</string>
  <string name="ism_search_streams_hint">Search streams…</string>
  <string name="ism_all">All</string>
  <string name="ism_private_streams">Private</string>
  <string name="ism_restream">Restream</string>
  <string name="ism_multilive">Multilive</string>
  <string name="ism_hd">HD</string>
  <string name="ism_recorded">Recorded</string>
  <string name="ism_no_gifts">No gifts currently available!!</string>
  <string name="ism_gift_name">Gift No. %1$s</string>
  <string name="ism_gift_category_animated">Animated Gifts</string>
  <string name="ism_no_gifts_category">No gifts categories</string>
  <string name="ism_remote_audio">%1$s remote audio</string>
  <string name="ism_remote_video">%1$s remote video</string>
  <string name="ism_mute">Mute</string>
  <string name="ism_unmute">Unmute</string>
  <string name="ism_type_something_here">Send a message…</string>
  <string name="ism_live_indicator">Live</string>
  <string name="ism_offline_indicator">Offline</string>
  <string name="ism_connecting_indicator">Connecting</string>
  <string name="ism_message_removed">The message has been removed by %1$s at %2$s</string>
  <string name="ism_delete_unsent_message">A message can only be deleted after it has been sent.</string>
  <string name="ism_reply_to_unsent_message">A message can only be replied to after it has been sent.</string>
  <string name="ism_view_replies"><u>View Replies</u></string>
  <string name="ism_you">%1$s(Me)</string>
  <string name="ism_coins">%1$s coins</string>
  <string name="ism_viewer_left">%1$s left the audience</string>
  <string name="ism_viewer_joined">%1$s joined the audience</string>
  <string name="ism_viewer_removed">%1$s has been kicked out of the audience by %2$s</string>
  <string name="ism_viewer_timeout">%1$s in the audience, is not Live anymore</string>
  <string name="ism_member_left">%1$s left the publisher\'s group</string>
  <string name="ism_member_added">%1$s has been added to the publisher\'s group by %2$s</string>
  <string name="ism_member_removed">%1$s has been kicked out of the publisher\'s group by %2$s</string>
  <string name="ism_member_timeout">%1$s in the publisher\'s group, is not Live anymore</string>
  <string name="ism_member_publish_start">%1$s in the publisher\'s group started streaming</string>
  <string name="ism_member_publish_stop">%1$s in the publisher\'s group stopped streaming</string>
  <string name="ism_member_kicked_out">You\'ve been kicked out of the publisher\'s group by %1$s</string>
  <string name="ism_viewer_kicked_out">You\'ve been kicked out of the audience by %1$s</string>
  <string name="ism_leave">Leave</string>
  <string name="ism_filters">Filters</string>
  <string name="ism_masks">Masks</string>
  <string name="ism_effects">Effects</string>
  <string name="ism_clear_all">Clear All</string>
  <string name="ism_hello">Hello</string>
  <string name="ism_adding_request">Sending copublish request</string>
  <string name="ism_removing_request">Deleting copublish request</string>
  <string name="ism_switching_profile">Switching profile</string>
  <string name="ism_got_it">GOT IT</string>
  <string name="ism_not_authorized_publisher">Not authorized to join broadcast as publisher</string>
  <string name="ism_not_authorized_audience">Not authorized to join broadcast as viewer</string>
  <string name="ism_streaming_fail">Failed to join broadcast with error code %1$d</string>
  <string name="ism_streaming_fail_no_network">Failed to preview broadcast as internet connection is not available.</string>
  <string name="ism_streaming_preview_fail_reason">Failed to preview broadcast with error %1$s</string>
  <string name="ism_streaming_session_fail">Failed to join broadcast with error %1$s</string>
  <string name="ism_metadata_received">Timed metadata received - </string>
  <string name="ism_streaming_join_error">Failed to join broadcast with error %1$s</string>
  <string name="ism_disclaimer_message">We moderate Live broadcasts.\nSmoking,vulgarity,porn,indecent exposure,child pornography is not allowed and will be banned.\nLive broadcasts are monitored 24 hours a day. </string>
  <string name="ism_warning_message">Warning: third-party topup or recharge is subject to account closure,suspension or permanent ban. </string>
  <string name="ism_stream_members">Members</string>
  <string name="ism_no_members">No members found</string>
  <string name="ism_admin">Host</string>
  <string name="ism_removing_member">Removing member</string>
  <string name="ism_not_publishing">Not publishing</string>
  <string name="ism_search_members_hint">Search members…</string>
  <string name="ism_stream_viewers">Viewers</string>
  <string name="ism_no_viewers">No viewers found</string>
  <string name="ism_remove">Remove</string>
  <string name="ism_removing_viewer">Removing viewer</string>
  <string name="ism_search_viewers_hint">Search viewers…</string>
  <string name="ism_stream_offline_initiator_stop">Broadcast has been ended by the initiator</string>
  <string name="ism_stream_offline_no_publisher">Broadcast is no longer live as none of the members in the publisher\'s group are publishing now</string>
  <string name="ism_stream_offline">Broadcast is no longer live</string>
  <string name="ism_create_user">Create User</string>
  <string name="ism_no_users">No registered users found</string>
  <string name="ism_users">Users</string>
  <string name="ism_select">Select</string>
  <string name="ism_search_users_hint">Search users…</string>
  <string name="ism_user_password">User Password*</string>
  <string name="ism_enter_user_password">Enter user password</string>
  <string name="ism_next">Next</string>
  <string name="ism_user_name">User Name*</string>
  <string name="ism_user_identifier">User Identifier*</string>
  <string name="ism_enter_user_name">Enter user name</string>
  <string name="ism_enter_user_identifier">Enter username, phone or email</string>
  <string name="ism_select_user"> Select user</string>
  <string name="ism_avoid_create_user">Don\'t wanna create user?</string>
  <string name="ism_permission_image_capture">Grant permission to capture image!!</string>
  <string name="ism_permission_image_capture_denied">Permission to capture image denied!!</string>
  <string name="ism_image_capture_canceled">Image capture canceled!!</string>
  <string name="ism_image_capture_failure">Failed to capture image!!</string>
  <string name="ism_camera_not_found">Camera not found!!</string>
  <string name="ism_ok">OK</string>
  <string name="ism_invalid_username">Add user name to continue!!</string>
  <string name="ism_invalid_user_identifier">Add user identifier to continue!!</string>
  <string name="ism_invalid_user_image">Add user profile pic to continue!!</string>
  <string name="ism_creating_user">Creating user</string>
  <string name="ism_uploading_image">Uploading image</string>
  <string name="ism_user_image_alert_heading">User profile image</string>
  <string name="ism_user_image_alert_message">Create user without a profile image?</string>
  <string name="ism_yes">Yes</string>
  <string name="ism_no">No</string>
  <string name="ism_missing_user_password">Add user password to continue!!</string>
  <string name="ism_invalid_user_password">Password must be atleast 6 characters long and should have atleast one each of digit,small,capital alphabets and special character!!</string>
  <string name="ism_save">Save</string>
  <string name="ism_edit_user">Edit User</string>
  <string name="ism_updating_user_details">Updating user details</string>
  <string name="ism_edit_user_details_canceled">Edit user details canceled!!</string>
  <string name="ism_edit_user_details_failed">Failed to update user details!!</string>
  <string name="ism_user_details">User Details</string>
  <string name="ism_user_name_holder">User Name</string>
  <string name="ism_user_identifier_holder">User Identifier</string>
  <string name="ism_switch_user">Switch User</string>
  <string name="ism_deleting_user">Deleting user</string>
  <string name="ism_ar_camera">AR Camera</string>
  <string name="ism_restream_channels">Restream Channels</string>
  <string name="ism_rtmp_ingest_url">RTMP Ingest Url</string>
  <string name="ism_rtmp_ingest_url_not_requested">RTMP ingest url not requested yet…</string>
  <string name="ism_initiated_by">Initiated by %1$s , %2$s</string>
  <string name="ism_add">Add</string>
  <string name="ism_adding_member">Adding member</string>
  <string name="ism_no_users_add_member">No users found to add to broadcast</string>
  <string name="ism_no_viewers_add_member">No viewers found to add to broadcast</string>
  <string name="ism_fetching_users">Fetching users</string>
  <string name="ism_golive_heading">Go Live with</string>
  <string name="ism_golive_description">When you go live with someone, anyone who can watch their broadcast can watch it too.</string>
  <string name="ism_new_broadcast">New Broadcast</string>
  <string name="ism_add_members">Add members</string>
  <string name="ism_max_members_selected">A broadcast cannot have more than 6 members</string>
  <string name="ism_invalid_broadcast_description">Add broadcast description to continue!!</string>
  <string name="ism_starting_broadcast">Starting broadcast</string>
  <string name="ism_no_users_start_broadcast">No users found to co-broadcast with</string>
  <string name="ism_restream_audio_only_not_supported">Restream not supported for audio only broadcasts</string>
  <string name="ism_public_not_supported">Public mode only supported for multi-live broadcasts</string>
  <string name="ism_connection_lost">You are offline!!</string>
  <string name="ism_stream_requests">Requests</string>
  <string name="ism_accept">Accept</string>
  <string name="ism_decline">Decline</string>
  <string name="ism_search_copublish_requests_hint">Search copublish requests…</string>
  <string name="ism_mute_local_audio">Mute my audio</string>
  <string name="ism_unmute_local_audio">Unmute my audio</string>
  <string name="ism_mute_remote_audio">Mute remote audio</string>
  <string name="ism_mute_local_video">Mute my video</string>
  <string name="ism_unmute_local_video">Unmute my video</string>
  <string name="ism_channels">Restream Channels</string>
  <string name="ism_toggle_channels">Toggle All Channels</string>
  <string name="ism_no_channels">No channels found</string>
  <string name="ism_stop_moderating">Stop Moderating</string>
  <string name="ism_added_as_moderator">Added to moderator\'s group of broadcast</string>
  <string name="ism_added_as_moderator_description">%1$s has been added to the moderator\'s group of the broadcast by %2$s.\nBeing a moderator one can kick out members and viewers, reply-to and delete messages.</string>
  <string name="rtmp_url">RTMP URL</string>
  <string name="rtmp_url_info">If you disable PERSISTENT RTMP URL you will get a new URL and a stream key every time you start a new stream</string>
  <string name="rtmp_key_info">Please copy paste the STREAM KEY and the STREAM URL  into your RTMP streaming device. \n\nIf you want to create a new STREAM KEY in case you think your key is compromised Click here</string>
  <string name="stream_key">Stream Key</string>
  <string name="key_will_be_generated_after_you_start_a_new_stream">Key will be generated after you start a new stream</string>
</resources>