<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ism_black"
    >

  <View
      android:id="@+id/vPeek"
      android:layout_margin="@dimen/ism_dp_20"
      android:layout_width="@dimen/ism_dp_80"
      android:layout_height="@dimen/ism_dp_4"
      android:layout_centerHorizontal="true"
      android:background="@drawable/ism_peek_rectangle"
      />

  <TextView
      android:id="@+id/tvHeading"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/vPeek"
      android:textSize="@dimen/ism_sp_18"
      android:text="@string/ism_added_as_moderator"
      android:textColor="@color/ism_white"
      android:layout_centerHorizontal="true"
      android:gravity="center_horizontal"
      android:layout_marginTop="@dimen/ism_dp_20"
      android:layout_marginStart="@dimen/ism_dp_44"
      android:layout_marginEnd="@dimen/ism_dp_44"
      android:layout_marginBottom="@dimen/ism_dp_16"
      android:textStyle="bold"
      />

  <TextView
      android:id="@+id/tvDescription"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tvHeading"
      android:textSize="@dimen/ism_sp_14"
      android:text="@string/ism_added_as_moderator_description"
      android:textColor="@color/ism_white"
      android:layout_centerHorizontal="true"
      android:gravity="center_horizontal"
      android:layout_marginStart="@dimen/ism_dp_30"
      android:layout_marginEnd="@dimen/ism_dp_30"
      />

  <LinearLayout
      android:id="@+id/llModeratorAdded"
      android:layout_marginTop="@dimen/ism_dp_16"
      android:layout_below="@+id/tvDescription"
      android:layout_width="match_parent"
      android:weightSum="2"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/ism_dp_8"
      >

    <TextView
        android:id="@+id/tvOk"
        android:layout_width="@dimen/ism_dp_0"
        android:layout_height="wrap_content"
        android:textColor="@color/ism_white"
        android:background="@drawable/ism_cancel_button"
        android:text="@string/ism_got_it"
        android:padding="@dimen/ism_dp_8"
        android:layout_margin="@dimen/ism_dp_13"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/tvAction"
        android:layout_width="@dimen/ism_dp_0"
        android:layout_height="wrap_content"
        android:textColor="@color/ism_white"
        android:background="@drawable/ism_request_button"
        android:text="@string/ism_stop_moderating"
        android:padding="@dimen/ism_dp_8"
        android:layout_margin="@dimen/ism_dp_13"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        />

  </LinearLayout>

  <TextView
      android:id="@+id/tvGotIt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/ism_white"
      android:background="@drawable/ism_request_button"
      android:text="@string/ism_got_it"
      android:padding="@dimen/ism_dp_13"
      android:gravity="center_horizontal"
      android:layout_below="@+id/tvDescription"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="@dimen/ism_dp_8"
      android:layout_margin="@dimen/ism_dp_24"
      android:visibility="gone"
      />

</RelativeLayout>